ajouté pagination pour produits

--- a/components/UI/card/Card.module.css
+++ b/components/UI/card/Card.module.css
@@ -2,8 +2,10 @@
   border-radius: 8px;
   border: 1px solid black;
   overflow: hidden;
+  margin-bottom: 30px;
+  margin-right: 10px;
 }
 
 .cardSmall {
-  width: 300px;
+  width: 320px;
 }
