--- a/components/UI/card/CardContainer.module.css
+++ b/components/UI/card/CardContainer.module.css
@@ -1,6 +1,27 @@
 .cardContainer {
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: 30px;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 30px;
+  margin-bottom: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .cardContainer {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (min-width: 992px) {
+  .cardContainer {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .cardContainer {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+@media screen and (min-width: 1400px) {
+  .cardContainer {
+    grid-template-columns: repeat(5, 1fr);
+  }
 }
