--- a/components/layout/Layout.module.css
+++ b/components/layout/Layout.module.css
@@ -1,8 +1,11 @@
 .layout {
   background-color: #ccc;
   flex-grow: 1;
+  display: flex;
+  justify-content: center;
 }
 
 .layoutContent {
-  margin: 30px;
+  max-width: 1400px;
+  margin: 30px 20px;
 }
